backend/.k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${APP_NAME}
  namespace: ${NAMESPACE}
  labels:
    app: todomanagement-api

spec:
  replicas: 1

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0   # traffic kesilmesin

  selector:
    matchLabels:
      app: todomanagement-api

  template:
    metadata:
      labels:
        app: todomanagement-api

    spec:
      terminationGracePeriodSeconds: 30

      containers:
        - name: ${APP_NAME}
          image: ${IMAGE_PATH}
          imagePullPolicy: Always

          ports:
            - containerPort: 8080
              protocol: TCP

          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"

          # -----------------------
          # READINESS PROBE
          # -----------------------
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3

          # -----------------------
          # LIVENESS PROBE
          # -----------------------
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3

      imagePullSecrets:
        - name: retail-gitlab
