backend/.k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${BACKEND_NAME}-ingress
  namespace: ${NAMESPACE}
spec:
  ingressClassName: nginx
  rules:
    - host: api.todo-test.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ${BACKEND_NAME}
                port:
                  number: 80
